Fixing image spacing

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -8,9 +8,6 @@ blockquote {
     border: 1px solid;
 }
 
-.col-md-4{
-    margin: auto;
-}
 
 .col-lg-9{
     margin: auto;
